# smtp-uvx-mcp

./: .gitignore  README.md  email_mcp.py  pyproject.toml  requirements.txt
src/smtp_uvx_mcp/: __init__.py  __main__.py  main.py  server.py
